--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,14 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-alert-dialog": "^1.1.13",
+    "@radix-ui/react-avatar": "^1.1.9",
+    "@radix-ui/react-label": "^2.1.6",
+    "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-slot": "^1.2.2",
+    "@tanstack/react-query": "^5.75.7",
+    "@xellar/kit": "^2.0.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "formik": "^2.4.6",
     "lucide-react": "^0.508.0",
+    "moment": "^2.30.1",
+    "motion": "^12.10.5",
     "next": "15.3.2",
+    "next-themes": "^0.4.6",
+    "pinata": "^2.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.2.0"
+    "recharts": "^2.15.3",
+    "sonner": "^2.0.3",
+    "tailwind-merge": "^3.2.0",
+    "viem": "^2.29.1",
+    "wagmi": "^2.15.2",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
